--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "prettier": "^3.2.5",
     "postcss-preset-env": "^9.5.2",
+    "prettier": "^3.2.5",
     "vite": "^5.1.6"
+  },
+  "dependencies": {
+    "route-parser": "^0.0.5"
   }
 }
