--- a/pages/main.template
+++ b/pages/main.template
@@ -9,15 +9,15 @@
 
     <ul class="products__track">
       <li class="product product__link product__link_nastil">
-        <h3 class="title">Сварной настил</h3>
+        <h3 class="product__title">Сварной настил</h3>
         <a href="#" class="product__link" target="_blank"></a>
       </li>
       <li class="product product__link product__link_steps">
-        <h3 class="title">Ступени</h3>
+        <h3 class="product__title">Ступени</h3>
         <a href="#" class="product__link" target="_blank"></a>
       </li>
       <li class="product product__link product__link_fastener">
-        <h3 class="title">Крепеж</h3>
+        <h3 class="product__title">Крепеж</h3>
         <a href="#" class="product__link" target="_blank"></a>
       </li>
     </ul>
