--- a/pages/main.template
+++ b/pages/main.template
@@ -6,7 +6,10 @@
 <section class="products">
   <div class="products__container">
     <h2 class="products__title">Наша продукция</h2>
-
+    <img class="product__img1" src="../picture/forproducts3.png" alt="picture">
+    <img class="product__img2" src="../picture/forproducts4.png" alt="picture">
+    <img class="product__img3" src="../picture/forproducts7.png" alt="picture">
+    <img class="product__img4" src="../picture/forproducts6.png" alt="picture"> 
     <ul class="products__track">
       <li class="product product__link">
         <a href="#" class="product__link" target="_blank">
@@ -23,6 +26,6 @@
           <h3 class="product__title">Крепеж</h3>
         </a>
       </li>
-    </ul>
+    </ul>  
   </div>
 </section>
