--- a/pages/services.template
+++ b/pages/services.template
@@ -1,40 +1,19 @@
 <!-- <h1>Услуги</h1> -->
 
 <section class="services">
-    <div class="services__container">
-        <section class="backpage">
-            <ul class="backpage__list">
-                <li class="backpage__item">
-                    <a class="backpage__link" href="/">Главная</a>
-                </li>
-                <li class="backpage__item">Услуги</li>
-            </ul>
-
-        </section>
-        <h1 class="services__title">Услуги компании</h1>
-    </div>
-    <ul class="services__list">
-        <li>
-            <a class="services__link" href="/">
-                <div class="services__img">
-                    <img src="../picture/photoforservices2.jpg" width="360" height="320" alt="Проектирование">
-                </div>
-                <div class="services__text">
-                    <p class="services__name">Проектирование и разработка КМД</p>
-                </div>
-            </a>
-        </li>
-        <li>
-            <a class="services__link" href="/">
-                <div class="services__img">
-                    <img src="../picture/photoforservices.jpg" width="360" height="320" alt="Доставка">
-                </div>
-                <div class="services__text">
-                    <p class="services__name">Доставка на объекты</p>
-                </div>
-            </a>
-
-        </li>
-    </ul>
-
+  <div class="services__container">
+    <h1 class="services__title">Услуги компании</h1>
+  </div>
+  <ul class="services__list">
+    <li>
+      <a class="services__link services__link_project" href="/" target="_blank">
+        <h3 class="services__name">Проектирование и разработка КМД</h3>
+      </a>
+    </li>
+    <li>
+      <a class="services__link services__link_delivery" href="/" target="_blank">
+        <h3 class="services__name">Доставка на объекты</h3>
+      </a>
+    </li>
+  </ul>
 </section>
