--- a/pages/contacts.template
+++ b/pages/contacts.template
@@ -1,36 +1,28 @@
 <section class="contacts">
-    <div class="contacts__container content">
-        <h1 class="contacts__title_main page-title">Наши контакты</h1>
-        <div class="contacts__inner">
-            <div id="contacts-btns" class="contacts__buttons">
-                <button id="office" class="contacts__btn btn btn__active">Офис</button>
-                <button id="factory" class="contacts__btn btn">Производство и склад</button>
-            </div>
-            <h2 class="contacts__title">Наши контакты</h2>
-            <p class="contacts__address">
-                Адрес: 115230, г. Москва, проезд Хлебозаводский, д.7, стр.9, этаж 3, пом. Х, офис 31.
-            </p>
-            <ul class="contacts__list">
-                <li class="contacts__item contacts__item_phone">
-                    <a class="link" href="tel:+79999999999">+7 999 999-99-99</a>
-                </li>
-                <li class="contacts__item contacts__item_email">
-                    <a class="link" href="mailto:info@ст3nastyl.ru">info@ст3nastyl.ru</a>
-                </li>
-                <li class="contacts__item contacts__item_email">
-                    <a class="link" href="mailto:zakaz@ст3nastyl.ru">zakaz@ст3nastyl.ru</a>
-                </li>
-            </ul>
-            <img class="contacts__img" src="" alt="">
-        </div>
-        <div class="contacts__footer">
-            <h2 class="contacts__title contacts__title_footer">Реквизиты компании</h2>
-            <ul class="contacts__list">
-                <li class="contacts__item">OOO «Торговый Дом Металл Полимер»</li>
-                <li class="contacts__item">ИНН7724462549</li>
-                <li class="contacts__item">ОГРН 119774600504</li>
-            </ul>
-        </div>
-
+  <div class="contacts__container content">
+    <h1 class="contacts__title_main page-title">Наши контакты</h1>
+    <contact-tabs>
+      <ul slot="contacts-list" class="contacts__list">
+        <li class="contacts__item contacts__item_phone">
+          <a class="link" href="tel:+79999999999">+7 999 999-99-99</a>
+        </li>
+        <li class="contacts__item contacts__item_email">
+          <a class="link" href="mailto:info@ст3nastyl.ru">info@ст3nastyl.ru</a>
+        </li>
+        <li class="contacts__item contacts__item_email">
+          <a class="link" href="mailto:zakaz@ст3nastyl.ru"
+            >zakaz@ст3nastyl.ru</a
+          >
+        </li>
+      </ul>
+    </contact-tabs>
+    <div class="contacts__footer">
+      <h2 class="contacts__title contacts__title_footer">Реквизиты компании</h2>
+      <ul class="contacts__list">
+        <li class="contacts__item">OOO «Торговый Дом Металл Полимер»</li>
+        <li class="contacts__item">ИНН7724462549</li>
+        <li class="contacts__item">ОГРН 119774600504</li>
+      </ul>
     </div>
+  </div>
 </section>
