--- a/pages/main.template
+++ b/pages/main.template
@@ -6,10 +6,10 @@
 <section class="products">
   <div class="products__container">
     <h2 class="products__title">Наша продукция</h2>
-    <img class="product__img product__img_img1" src="../picture/reshetka.png" alt="picture">
-    <img class="product__img product__img_img2" src="../picture/skruchenaya.png" alt="picture">
-    <img class="product__img product__img_img3" src="../picture/reshetkashirok.png" alt="picture">
-    <img class="product__img product__img_img4" src="../picture/tablisa.png" alt="picture"> 
+    <img class="product__img product__img_img1" src="/reshetka.png" alt="picture">
+    <img class="product__img product__img_img2" src="/skruchenaya.png" alt="picture">
+    <img class="product__img product__img_img3" src="/reshetkashirok.png" alt="picture">
+    <img class="product__img product__img_img4" src="/tablisa.png" alt="picture"> 
     <ul class="products__track">
       <li class="product product__link">
         <a href="#" class="product__link" target="_blank">
