--- a/pages/services.template
+++ b/pages/services.template
@@ -7,12 +7,16 @@
   <ul class="services__list">
     <li>
       <a class="services__link services__link_project" href="/" target="_blank">
-        <h3 class="services__name">Проектирование и разработка КМД</h3>
+        <span class="services__name">Проектирование и разработка КМД</span>
       </a>
     </li>
     <li>
-      <a class="services__link services__link_delivery" href="/" target="_blank">
-        <h3 class="services__name">Доставка на объекты</h3>
+      <a
+        class="services__link services__link_delivery"
+        href="/"
+        target="_blank"
+      >
+        <span class="services__name">Доставка на объекты</span>
       </a>
     </li>
   </ul>
