сделала 2 странички с проектированием и доставкой

--- a/pages/services.template
+++ b/pages/services.template
@@ -6,14 +6,14 @@
   </div>
   <ul class="services__list">
     <li>
-      <a class="services__link services__link_project" href="/" target="_blank">
+      <a class="services__link services__link_project" href="/servicesProject" target="_blank">
         <span class="services__name">Проектирование и разработка КМД</span>
       </a>
     </li>
     <li>
       <a
         class="services__link services__link_delivery"
-        href="/"
+        href="/servicesDelivery"
         target="_blank"
       >
         <span class="services__name">Доставка на объекты</span>
