--- a/pages/about.template
+++ b/pages/about.template
@@ -12,14 +12,14 @@
                 Основные виды деятельности компании (производство и торговля):
             </p>
             <ul>
-                <li class="li__about">
+                <li class="about__text_marker">
                     Нанесение полимерного покрытия на оцинкованную рулонную сталь
                 </li>
-                <li class="li__about">
+                <li class="about__text_marker">
                     Ограждающий конструкции (сэндвич панели, фасадные кассеты, профнастил
                     различных марок от С8 до Н153)
                 </li>
-                <li class="li__about">
+                <li class="about__text_marker">
                      Гладкий лист, штрипс, доборные элементы
                 </li>
             </ul> 
@@ -42,9 +42,9 @@
                         <strong>Наши преимущества:</strong>
                     </p>
                     <ul>
-                        <li class="li__about"> Собственное производство</li>
-                        <li class="li__about"> Наличие сертификатов соответствия и ТУ</li>
-                        <li class="li__about"> Разработка монтажных схем и КМД по чертежам Заказчика</li>
+                        <li class="about__text_marker"> Собственное производство</li>
+                        <li class="about__text_marker"> Наличие сертификатов соответствия и ТУ</li>
+                        <li class="about__text_marker"> Разработка монтажных схем и КМД по чертежам Заказчика</li>
                     </ul>
 
                 </div>
