--- a/pages/services/project.template
+++ b/pages/services/project.template
@@ -1,12 +1,12 @@
 <section class="services">
     <div class="servicesProject__container">
         <h1 class="services__title">Проектирование и разработка КМД</h1>
-        <div class="services__block">
+        <div class="servicesBlock">
             <div class="servicesBlock__title">
                 <p>Разработка монтажных схем и КМД по чертежам заказчика</p>
             </div>
             <ul class="servicesBlock__description">
-                <li class="li__about"> Стоимость услуги входит в стоимость продукции,
+                <li class="servicesBlock__description_marker"> Стоимость услуги входит в стоимость продукции,
                     если заказ на решетчатый настил Вы размещаете 
                     в нашей компании.</li>
 
