--- a/pages/services/delivery.template
+++ b/pages/services/delivery.template
@@ -1,4 +1,4 @@
-<section class="services">
+<section class="servicesDelivery">
   <div class="servicesDelivery__container">
     <h1 class="services__title">Доставка на объекты</h1>
     <div class="servicesBlock">
