--- a/pages/services/project.template
+++ b/pages/services/project.template
@@ -1,4 +1,4 @@
-<section class="services">
+<section class="servicesProject">
     <div class="servicesProject__container">
         <h1 class="services__title">Проектирование и разработка КМД</h1>
         <div class="servicesBlock">
