--- a/pages/services.template
+++ b/pages/services.template
@@ -6,7 +6,7 @@
   </div>
   <ul class="services__list">
     <li>
-      <a class="services__link services__link_project" href="/services/project" target="_blank">
+      <a class="services__link services__link_project" href="/services/project">
         <span class="services__name">Проектирование и разработка КМД</span>
       </a>
     </li>
@@ -14,7 +14,6 @@
       <a
         class="services__link services__link_delivery"
         href="/services/delivery"
-        target="_blank"
       >
         <span class="services__name">Доставка на объекты</span>
       </a>
