--- a/pages/about.template
+++ b/pages/about.template
@@ -33,8 +33,8 @@
                     <p>
                         Мы производим и поставляем оцинкованные решетчатые настилы 
                         в любой регион России. Поставки от производителя гарантируют 
-                        высокое качество поставляемой продукции и низкие цены. 
-                        Высокое качество материалов и выполнение заказов точно в срок.
+                        высокое качество поставляемой продукции, низкие цены
+                        и выполнение заказов точно в срок.
                     </p>
                 </div>
                 <div class="about__text">
