--- a/pages/about.template
+++ b/pages/about.template
@@ -1,56 +1,71 @@
-<section class="about">
+<app-layout>
+  <section class="about">
     <div class="about__container">
-        <h3 class="about__title">О компании</h3>
-        <img class="about__img" src="/proizvodstvo_nastila.jpg" width="720" height="400" alt="производство настила">
-        <div class="about__text">
-            <p>
-                <strong>Компания ООО «ТД Металл Полимер»</strong>
-                производственно-торговая компания 
-                начавшая свою деятельность в 2019 году.
-            </p>
-            <p>
-                Основные виды деятельности компании (производство и торговля):
-            </p>
-            <ul>
-                <li class="about__text_marker">
-                    Нанесение полимерного покрытия на оцинкованную рулонную сталь
-                </li>
-                <li class="about__text_marker">
-                    Ограждающий конструкции (сэндвич панели, фасадные кассеты, профнастил
-                    различных марок от С8 до Н153)
-                </li>
-                <li class="about__text_marker">
-                     Гладкий лист, штрипс, доборные элементы
-                </li>
-            </ul> 
-        </div>     
-                <div class="about__text">
-                    <p>
-                        <strong>Компания ООО «ТД Металл Полимер»</strong>
-                        предлагает к поставке стальные, оцинкованные, решетчатые настилы (сварные и прессованные), 
-                        а так же металлоконструкции (площадки, лестницы, ограждения). 
-                    </p>
-                    <p>
-                        Мы производим и поставляем оцинкованные решетчатые настилы 
-                        в любой регион России. Поставки от производителя гарантируют 
-                        высокое качество поставляемой продукции, низкие цены
-                        и выполнение заказов точно в срок.
-                    </p>
-                </div>
-                <div class="about__text">
-                    <p>
-                        <strong>Наши преимущества:</strong>
-                    </p>
-                    <ul>
-                        <li class="about__text_marker"> Собственное производство</li>
-                        <li class="about__text_marker"> Наличие сертификатов соответствия и ТУ</li>
-                        <li class="about__text_marker"> Разработка монтажных схем и КМД по чертежам Заказчика</li>
-                    </ul>
-
-                </div>
-                <div class="about__end">
-                    <h3 class="about__title">Карта поставок</h3>
-                    <img class="about__img" src="/karta_postavok.jpg" width="800" height="400" alt="карта поставок">
-                </div>
+      <h3 class="about__title">О компании</h3>
+      <img
+        class="about__img"
+        src="/proizvodstvo_nastila.jpg"
+        width="720"
+        height="400"
+        alt="производство настила"
+      />
+      <div class="about__text">
+        <p>
+          <strong>Компания ООО «ТД Металл Полимер»</strong>
+          производственно-торговая компания начавшая свою деятельность в 2019
+          году.
+        </p>
+        <p>Основные виды деятельности компании (производство и торговля):</p>
+        <ul>
+          <li class="about__text_marker">
+            Нанесение полимерного покрытия на оцинкованную рулонную сталь
+          </li>
+          <li class="about__text_marker">
+            Ограждающий конструкции (сэндвич панели, фасадные кассеты,
+            профнастил различных марок от С8 до Н153)
+          </li>
+          <li class="about__text_marker">
+            Гладкий лист, штрипс, доборные элементы
+          </li>
+        </ul>
+      </div>
+      <div class="about__text">
+        <p>
+          <strong>Компания ООО «ТД Металл Полимер»</strong>
+          предлагает к поставке стальные, оцинкованные, решетчатые настилы
+          (сварные и прессованные), а так же металлоконструкции (площадки,
+          лестницы, ограждения).
+        </p>
+        <p>
+          Мы производим и поставляем оцинкованные решетчатые настилы в любой
+          регион России. Поставки от производителя гарантируют высокое качество
+          поставляемой продукции, низкие цены и выполнение заказов точно в срок.
+        </p>
+      </div>
+      <div class="about__text">
+        <p>
+          <strong>Наши преимущества:</strong>
+        </p>
+        <ul>
+          <li class="about__text_marker">Собственное производство</li>
+          <li class="about__text_marker">
+            Наличие сертификатов соответствия и ТУ
+          </li>
+          <li class="about__text_marker">
+            Разработка монтажных схем и КМД по чертежам Заказчика
+          </li>
+        </ul>
+      </div>
+      <div class="about__end">
+        <h3 class="about__title">Карта поставок</h3>
+        <img
+          class="about__img"
+          src="/karta_postavok.jpg"
+          width="800"
+          height="400"
+          alt="карта поставок"
+        />
+      </div>
     </div>
-</section>
+  </section>
+</app-layout>
