--- a/pages/services.template
+++ b/pages/services.template
@@ -1,22 +1,25 @@
-<!-- <h1>Услуги</h1> -->
-
-<section class="services">
-  <div class="services__container">
-    <h1 class="services__title">Услуги компании</h1>
-  </div>
-  <ul class="services__list">
-    <li>
-      <a class="services__link services__link_project" href="/services/project">
-        <span class="services__name">Проектирование и разработка КМД</span>
-      </a>
-    </li>
-    <li>
-      <a
-        class="services__link services__link_delivery"
-        href="/services/delivery"
-      >
-        <span class="services__name">Доставка на объекты</span>
-      </a>
-    </li>
-  </ul>
-</section>
+<app-layout>
+  <section class="services">
+    <div class="services__container">
+      <h1 class="services__title">Услуги компании</h1>
+    </div>
+    <ul class="services__list">
+      <li>
+        <a
+          class="services__link services__link_project"
+          href="/services/project"
+        >
+          <span class="services__name">Проектирование и разработка КМД</span>
+        </a>
+      </li>
+      <li>
+        <a
+          class="services__link services__link_delivery"
+          href="/services/delivery"
+        >
+          <span class="services__name">Доставка на объекты</span>
+        </a>
+      </li>
+    </ul>
+  </section>
+</app-layout>
