--- a/pages/services.template
+++ b/pages/services.template
@@ -4,21 +4,11 @@
       <h1 class="services__title">Услуги компании</h1>
     </div>
     <ul class="services__list">
-      <li>
-        <a
-          class="services__link services__link_project"
-          href="/services/project"
-        >
-          <span class="services__name">Проектирование и разработка КМД</span>
-        </a>
+      <li class="services__item">
+        <img-link class="services__link" href="/services/project" bg="/project.jpg">Проектирование и разработка КМД</img-link>
       </li>
-      <li>
-        <a
-          class="services__link services__link_delivery"
-          href="/services/delivery"
-        >
-          <span class="services__name">Доставка на объекты</span>
-        </a>
+      <li class="services__item">
+        <img-link class="services__link" href="/services/delivery" bg="/builder.jpg">Доставка на объекты</img-link>
       </li>
     </ul>
   </section>
