--- a/pages/services/project.template
+++ b/pages/services/project.template
@@ -1,15 +1,14 @@
 <app-layout>
   <section class="servicesProject">
     <div class="servicesProject__container">
-      <h1 class="servicesProject__title">Разработка монтажных схем и КМД по чертежам Заказчика</h1>
+      <h1 class="servicesProject__title">
+        Разработка монтажных схем и КМД по чертежам Заказчика
+      </h1>
       <div class="servicesProject__block">
-        <!-- <div class="servicesBlock__title">
-          <p>Проектирование и разработка КМД</p>
-        </div> -->
         <ul class="servicesProject__description">
           <li class="servicesBlock__description_marker">
-            Стоимость услуги входит в стоимость продукции, <br/> если заказ на
-            решетчатый настил Вы размещаете в нашей компании.
+            Стоимость услуги входит в стоимость продукции, <br />
+            если заказ на решетчатый настил Вы размещаете в нашей компании.
           </li>
         </ul>
       </div>
