--- a/pages/services/delivery.template
+++ b/pages/services/delivery.template
@@ -1,7 +1,7 @@
 <app-layout>
   <section class="servicesDelivery">
     <div class="servicesDelivery__container">
-      <h1 class="services__title">Доставка на объекты</h1>
+      <h1 class="servicesBlock__title">Доставка на объекты</h1>
       <div class="servicesBlock">
         <ul
           class="servicesBlock__description servicesBlock__description_delivery"
@@ -19,7 +19,7 @@
             Калужская область, п. Льва Толстого, улица
           </li>
         </ul>
-        <img
+        <!-- <img
           class="delivery__img delivery__img_avto"
           src="/dostavka_avto.jpg"
           alt="фура"
@@ -28,6 +28,13 @@
           class="delivery__img delivery__img_poezd"
           src="/dostavka_poezd.jpg"
           alt="поезд"
+        /> -->
+        <img
+          class="about__img"
+          src="/karta_postavok.jpg"
+          width="800"
+          height="400"
+          alt="карта поставок"
         />
       </div>
     </div>
