--- a/pages/manufacture.template
+++ b/pages/manufacture.template
@@ -6,13 +6,31 @@
         <video class="video"  src="/manufacture_video1.mp4" controls="controls" width="450px" height="400px"></video>
         <video class="video" src="/manufacture_video2.mp4"  controls="controls" width="450px" height="400px"></video>
       </div>
+    <div class="manufacture-fotos">
+      <img class="manufacture__photo" src="/ourManufacture1jpg.jpg">
+      <img class="manufacture__photo" src="/ourManufacrure2.jpg">
+      <img class="manufacture__photo" src="/ourManufacture3.jpg">
+      <img class="manufacture__photo" src="/ourManufacture4.jpg">
+
+    </div>
       <h3 class="manufacture__title">Наши работы</h3>
-      <div class="manufacture__gallery">
-        <img class="manufacture__photo manufacture__photo_nastil" src="/manufacture_nastil.jpg">
-        <img class="manufacture__photo manufacture__photo_steps" src="/manufacture_fasteners.jpg">
-        <img class="manufacture__photo manufacture__photo_fastener" src="/manufacture_products.jpg">
-        <img class="manufacture__photo manufacture__photo_fastener" src="/manufacture_products2.jpg">
-      </div>
+      <!-- <div class="manufacture__gallery"> -->
+      <slider-component>
+          <img class="manufacture__photo manufacture__photo_nastil" src="/manufacture_fasteners.png">
+          <img class="manufacture__photo manufacture__photo_steps" src="/manufacture_nastil.png">
+          <img class="manufacture__photo manufacture__photo_fastener" src="/manufacture_products.png">
+          <img class="manufacture__photo manufacture__photo_fastener" src="/manufacture_products2.jpg">
+          <img class="manufacture__photo manufacture__photo_nastil" src="/public/manufacture_nastilDop.jpeg">
+          <img class="manufacture__photo manufacture__photo_steps" src="/public/manufacture_fastnerDop.jpeg">
+          <img class="manufacture__photo manufacture__photo_astene" src="/public/manufacture_nastil2Dop.jpeg">
+    </slider-component>
+  <!-- </div> -->
+
+       
+        <!-- <button class="prev-button" aria-label="предыдущий слайд"></button>
+        <button class="next-button" aria-label="следущий слайд"></button> -->
+
+
     </div>
   </section>
 
